[project]
name = "b-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.9",
    "asyncclick>=8.1.8",
    "asyncio>=3.4.3",
    "click>=8.1.7",
    "d2l>=0.17.0",
    "docling>=2.7.0",
    "fastapi>=0.115.5",
    "google-adk>=0.1.0",
    "hf-xet>=1.0.4",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "huggingface-hub>=0.30.2",
    "jwcrypto>=1.5.6",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.52",
    "langchain-google-genai>=2.1.2",
    "langchain-ollama>=0.3.1",
    "langgraph>=0.3.30",
    "mysql-connector-python>=9.2.0",
    "nuitka>=2.5.9",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.2",
    "pyhocon>=0.3.61",
    "pyinstaller>=6.11.1",
    "pyjwt>=2.10.1",
    "pysnmplib>=5.0.24",
    "requests>=2.32.3",
    "snmpclitools>=0.7.2",
    "sse-starlette>=2.2.1",
    "starlette>=0.41.3",
    "streamlit>=1.44.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.32.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
