[project]
name = "b-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.9",
    "d2l>=0.17.0",
    "fastapi>=0.115.5",
    "nuitka>=2.5.9",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pyhocon>=0.3.61",
    "pyinstaller>=6.11.1",
    "pysnmplib>=5.0.24",
    "snmpclitools>=0.7.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "uvicorn>=0.32.1",
]
